--- a/app/src/main/res/layout/fragment_expenditure.xml
+++ b/app/src/main/res/layout/fragment_expenditure.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.expense.ExpenditureFragment">
+    tools:context="org.sheridancollege.expensetracker.ui.expense.ExpenditureFragment">
 
     <TextView
         android:id="@+id/text_expense"
