--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddExpense">
+    tools:context="org.sheridancollege.expensetracker.ui.expense.AddExpense">
+
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
