--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddExpense">
+    tools:context=".AboutFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
+        android:id="@+id/aboutFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/fragment_about" />
