--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/main2"
+    android:background="@drawable/side_nav_bar"
     android:gravity="bottom"
     android:orientation="vertical"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -12,25 +12,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_banner" />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#FFFFFF"
         android:backgroundTint="#00BCD4"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
+        android:textStyle="bold"
         android:text="@string/nav_header_title"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/black"
-        android:textSize="18sp" />
+        android:textSize="25sp" />
 
     <TextView
         android:id="@+id/textView"
@@ -39,6 +32,7 @@
         android:background="#FFEB3B"
         android:text="@string/nav_header_subtitle"
         android:textAlignment="center"
+        android:textStyle="italic"
         android:textColor="#020202"
-        android:textSize="14sp" />
+        android:textSize="18sp" />
 </LinearLayout>
