Debug: Changed the data type of Date property

--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -55,7 +55,7 @@
     </fragment>
     <fragment
         android:id="@+id/addExpense"
-        android:name="org.sheridancollege.expensetracker.AddExpense"
+        android:name="org.sheridancollege.expensetracker.ui.expense.AddExpense"
         android:label="fragment_add_expense"
         tools:layout="@layout/fragment_add_expense" />
     <fragment
