Added RecyclerView, CardView, fragments, ViewModel and other utilities for expediture side

--- a/app/src/main/res/layout/fragment_expenditure.xml
+++ b/app/src/main/res/layout/fragment_expenditure.xml
@@ -6,6 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="org.sheridancollege.expensetracker.ui.expense.ExpenditureFragment">
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
 
     <TextView
         android:id="@+id/text_expense"
@@ -22,6 +27,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycleView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:clipToPadding="false"
+        android:padding="4dp"
+        tools:listitem="@layout/expense_item"
+        android:layout_marginTop="15dp"
+
+        />
+
+
+</LinearLayout>
+
+
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
@@ -29,4 +49,5 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         app:srcCompat="@drawable/ic_white_add" />
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
