--- a/app/src/main/res/layout/expense_item.xml
+++ b/app/src/main/res/layout/expense_item.xml
@@ -44,6 +44,7 @@
             android:textSize="18dp"/>
 
         <Button
+            android:id="@+id/btn_modify"
             android:layout_width="120dp"
             android:layout_height="45dp"
             android:text="Modify"
