--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -52,15 +52,31 @@
         <action
             android:id="@+id/action_expenditureFragment_to_addExpense"
             app:destination="@id/addExpense" />
+        <action
+            android:id="@+id/action_expenditureFragment_to_modifyExpenseFragment"
+            app:destination="@id/modifyExpenseFragment" />
     </fragment>
     <fragment
         android:id="@+id/addExpense"
         android:name="org.sheridancollege.expensetracker.ui.expense.AddExpense"
         android:label="fragment_add_expense"
-        tools:layout="@layout/fragment_add_expense" />
+        tools:layout="@layout/fragment_add_expense" >
+        <action
+            android:id="@+id/action_addExpense_to_expenditureFragment"
+            app:destination="@id/expenditureFragment" />
+    </fragment>
     <fragment
         android:id="@+id/aboutFragment"
         android:name="org.sheridancollege.expensetracker.AboutFragment"
         android:label="About"
         tools:layout="@layout/fragment_about" />
+    <fragment
+        android:id="@+id/modifyExpenseFragment"
+        android:name="org.sheridancollege.expensetracker.ui.expense.ModifyExpenseFragment"
+        android:label="modify_expense_fragment"
+        tools:layout="@layout/modify_expense_fragment" >
+        <action
+            android:id="@+id/action_modifyExpenseFragment_to_expenditureFragment"
+            app:destination="@id/expenditureFragment" />
+    </fragment>
 </navigation>
