--- a/app/src/main/res/layout/expense_item.xml
+++ b/app/src/main/res/layout/expense_item.xml
@@ -4,11 +4,12 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="4dp"
-    app:cardMaxElevation="10dp"
-    android:padding="5dp"
-    app:cardCornerRadius="8dp"
-    android:elevation="5dp"
-    app:cardBackgroundColor="#97C7DCEC"
+    app:cardMaxElevation="2dp"
+    app:contentPadding="4dp"
+    app:cardCornerRadius="10dp"
+    android:elevation="2dp"
+    app:cardBackgroundColor="#F8F1B5"
+
     >
 
     <RelativeLayout
@@ -44,6 +45,7 @@
             android:textSize="18dp"/>
 
         <Button
+            android:id="@id/btn_modify"
             android:layout_width="120dp"
             android:layout_height="45dp"
             android:text="Modify"
