--- a/app/src/main/res/layout/fragment_add_expense.xml
+++ b/app/src/main/res/layout/fragment_add_expense.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#3CFAAEAE"
     tools:context=".ui.expense.AddExpense">
 
     <TextView
@@ -11,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Add Expense"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:textSize="25dp"
         android:layout_marginTop="30dp"
@@ -21,9 +21,10 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Select the date:"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="80dp"
         android:paddingLeft="8dp"
         android:layout_marginLeft="15dp"
+        android:textColor="@color/black"
         android:textSize="18dp"
         android:textAlignment="textStart"
         android:textStyle="bold"
@@ -34,11 +35,13 @@
     <DatePicker
         android:id="@+id/date_picker"
         android:layout_width="350dp"
-        android:layout_height="100dp"
+        android:layout_height="150dp"
         android:datePickerMode="spinner"
         android:calendarViewShown="false"
         android:layout_below="@+id/textView_date"
         android:layout_centerHorizontal="true"
+        android:calendarTextColor="@color/black"
+        android:theme="@style/NumberPickerStyle"
         android:layout_marginTop="15dp"/>
 
     <TextView
@@ -48,6 +51,7 @@
         android:layout_marginTop="45dp"
         android:text="Description:"
         android:layout_marginLeft="15dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:paddingLeft="8dp"
         android:textSize="18dp"
@@ -57,7 +61,7 @@
 
     <EditText
         android:id="@+id/editText_description"
-        android:layout_width="245dp"
+        android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginLeft="17dp"
         android:layout_toRightOf="@+id/textView_description"
@@ -70,6 +74,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginLeft="15dp"
+        android:textColor="@color/black"
         android:textAlignment="textStart"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -80,19 +85,23 @@
 
     <EditText
         android:id="@+id/editText_amount"
-        android:layout_width="245dp"
+        android:layout_width="240dp"
         android:layout_height="40dp"
         android:layout_marginLeft="45dp"
         android:layout_toRightOf="@+id/textView_amount"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="30dp"
+        android:hint="$245.45"
+        android:inputType="numberDecimal"
         android:layout_below="@id/textView_description"/>
 
     <Button
         android:id="@+id/btn_add"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="50dp"
         android:text="Add"
+        android:textSize="18dp"
         android:layout_marginTop="33dp"
+        android:textStyle="bold"
         android:layout_below="@+id/editText_amount"
         android:layout_centerHorizontal="true"
         />
