--- a/app/src/main/res/layout/fragment_expenditure.xml
+++ b/app/src/main/res/layout/fragment_expenditure.xml
@@ -21,7 +21,9 @@
         android:layout_marginEnd="8dp"
         android:text="@string/nav_expenditure"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textSize="20sp"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,14 +42,15 @@
 
 
 </LinearLayout>
-
-
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
+        app:fabSize="normal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@drawable/ic_white_add" />
+        app:borderWidth="0dp"
+        app:backgroundTint="#2CCABB"
+        app:srcCompat="@drawable/ic_baseline_add_24" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
