--- a/app/src/main/res/layout/fragment_summary.xml
+++ b/app/src/main/res/layout/fragment_summary.xml
@@ -30,7 +30,7 @@
         android:layout_height="53dp"
         android:background="#FFEB3B"
         android:gravity="center|center_vertical"
-        android:text="Analysis"
+        android:text="Expense out of budget"
         android:textColor="#000000"
         android:textSize="25dp"
         app:layout_constraintBottom_toTopOf="@+id/btnCancel"
@@ -50,8 +50,6 @@
         android:fadeScrollbars="true"
         android:theme="@style/NumberPickerStyle"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-
-
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,9 +61,9 @@
         android:layout_width="wrap_content"
         android:layout_height="32dp"
         android:gravity="center|center_vertical"
-        android:text="Calendar"
+        android:text="Select the date"
         android:textColor="#000000"
-        android:textSize="18dp"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +110,7 @@
             <TextView
                 android:id="@+id/label_expense"
                 android:layout_marginLeft="30dp"
-                android:text="Expenses"
+                android:text="$2545.00"
                 android:textColor="#FF0000"
                 android:textSize="30dp"
                 android:textStyle="bold" />
@@ -122,7 +120,7 @@
             <TextView
                 android:id="@+id/label_expenditure"
                 android:layout_marginLeft="40dp"
-                android:text="Inocome"
+                android:text="$2300.00"
                 android:textColor="#0E8C13"
                 android:textSize="30dp"
                 android:textStyle="bold" />
