--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -43,7 +43,14 @@
         android:id="@+id/earningsFragment"
         android:name="org.sheridancollege.expensetracker.ui.income.EarningsFragment"
         android:label="fragment_earnings"
-        tools:layout="@layout/fragment_earnings" />
+        tools:layout="@layout/fragment_earnings" >
+        <action
+            android:id="@+id/action_earningsFragment_to_addEarning"
+            app:destination="@id/addEarning" />
+        <action
+            android:id="@+id/action_earningsFragment_to_modifyEarningsFragment"
+            app:destination="@id/modifyEarningsFragment" />
+    </fragment>
     <fragment
         android:id="@+id/expenditureFragment"
         android:name="org.sheridancollege.expensetracker.ui.expense.ExpenditureFragment"
@@ -79,4 +86,22 @@
             android:id="@+id/action_modifyExpenseFragment_to_expenditureFragment"
             app:destination="@id/expenditureFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/modifyEarningsFragment"
+        android:name="org.sheridancollege.expensetracker.ModifyEarningsFragment"
+        android:label="modify_earnings_fragment"
+        tools:layout="@layout/modify_earnings_fragment">
+    <action
+        android:id="@+id/action_modifyEarningsFragment_to_incFragment"
+        app:destination="@id/earningsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addEarning"
+        android:name="org.sheridancollege.expensetracker.ui.expense.AddEarning"
+        android:label="fragment_add_earning"
+        tools:layout="@layout/fragment_add_earning">
+    <action
+        android:id="@+id/action_addExpense_to_earningsFragment"
+        app:destination="@id/earningsFragment" />
+</fragment>
 </navigation>
