--- a/app/src/main/res/layout/fragment_earnings.xml
+++ b/app/src/main/res/layout/fragment_earnings.xml
@@ -5,7 +5,7 @@
     android:id="@+id/earningsFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="org.sheridancollege.expensetracker.ui.expense.ExpenditureFragment">
+    tools:context="org.sheridancollege.expensetracker.EarningsFragment">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
